# ferroclaw

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Justfile  Makefile  README.md  TODO.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: helpers.rs  main.rs
cli/src/cmd/: agent.rs  chat.rs  memory.rs  mod.rs  onboard.rs  sessions.rs
crates/ferroclaw-agent/: Cargo.toml
crates/ferroclaw-agent/src/: config.rs  lib.rs  loop_agent.rs  ollama.rs  openai.rs  provider.rs
crates/ferroclaw-core/: Cargo.toml
crates/ferroclaw-core/src/: error.rs  lib.rs  message.rs  session.rs  util.rs
crates/ferroclaw-memory/: Cargo.toml
crates/ferroclaw-memory/migrations/: 0001_init.sql
crates/ferroclaw-memory/src/: embedding.rs  error.rs  lib.rs  manager.rs  search.rs
crates/ferroclaw-session/: Cargo.toml
crates/ferroclaw-session/migrations/: 0001_init.sql
crates/ferroclaw-session/src/: manager.rs
crates/ferroclaw-tools/: Cargo.toml
crates/ferroclaw-tools/src/: bash_exec.rs  lib.rs  registry.rs  tool.rs
docs/: 01-what-is-openclaw.md  03-architecture-and-tech.md  ROADMAP.md
scripts/: pre-commit
