[workspace]
members = ["cli", "crates/ferroclaw-core", "crates/ferroclaw-agent", "crates/ferroclaw-tools", "crates/ferroclaw-session", "crates/ferroclaw-memory"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ferroclaw contributors"]
license = "MIT"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio-stream = "0.1"
futures-util = "0.3"
async-trait = "0.1"
dotenvy = "0.15"
toml = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
ferroclaw-core = { path = "crates/ferroclaw-core" }
ferroclaw-agent = { path = "crates/ferroclaw-agent" }
ferroclaw-tools = { path = "crates/ferroclaw-tools" }
ferroclaw-session = { path = "crates/ferroclaw-session" }
ferroclaw-memory = { path = "crates/ferroclaw-memory" }
