[package]
name = "ferroclaw"
version.workspace = true
edition.workspace = true

[[bin]]
name = "ferroclaw"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ferroclaw-core.workspace = true
ferroclaw-agent.workspace = true
ferroclaw-tools.workspace = true
ferroclaw-session.workspace = true
ferroclaw-memory.workspace = true
serde_json.workspace = true
ratatui = "0.29"
crossterm = "0.28"
