[package]
name = "ferroclaw-agent"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferroclaw-core = { workspace = true }
ferroclaw-tools = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
futures = "0.3"
async-trait = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
async-stream = "0.3"
dirs-next = "2"
