[package]
name = "ferroclaw-session"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferroclaw-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
