[package]
name = "ferroclaw-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ferroclaw-core = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
